--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -77,7 +77,7 @@
  jain_temples_tooltip:1 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、州の開発コスト§G-10%§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
  jain_temples_tooltip_2:0 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、税収§G+1§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
  SEEK_SUPPORT_OF_BRAHMINS:0 "バラモンの賛同を求める"
- EXEMPT_FROM_JIZYA:1 "Exempt From Jizya"
+ EXEMPT_FROM_JIZYA:1 "ジズヤの免除"
  EST_VAL_BRAHMIN_LEGITIMACY:0 "正統性を求める: §Y$VAL$%§!"
  muslim_brahmin_legitimacy:0 "バラモンにより正統化される"
  desc_muslim_brahmin_legitimacy:0 "我々はバラモン階級の人々の賛同を得ており、ヒンドゥー教徒の臣民たちは今や我々の支配をより正当なものと考えている。"
@@ -228,7 +228,7 @@
  rajputs_estate_events.4.a:0 "我々を親族と思うだろう。"
  rajputs_estate_events.4.b:0 "彼らとの友好は必要ない。"
  rajputs_estate_events.5.t:0 "ラージプートの御曹子が新たな領土を求める"
- rajputs_estate_events.5.d:1 "Rajput power in India is predicated on centuries of conquest, colonization, and settlement of lands beyond their power base in Rajasthan. A particularly bold and ambitious scion of a notable clan has appeared at court on a quest to enhance the prestige of his kin. Approaching the [Root.Monarch.GetTitle], he asks permission to settle [rajput_scion_province.GetName], where he shall found a new town. He promises in exchange to accept the rule of the [Root.Country.GetAdjective] state and to raise an army in our support whenever it is needed."
+ rajputs_estate_events.5.d:1 "インドにおけるラージプートの力は、何世紀にもわたる征服や植民地化、移住に基づくもので、ラージャスターンの勢力基盤を越えています。特に大胆かつ野心的な名門の末裔は、親族の威信を高めることを狙って王室に現れました。[Root.Monarch.GetTitle]に近づくと、彼は新都市を創設するため、[rajput_scion_province.GetName]に定住する許可を求めました。引き換えに、彼は[Root.Country.GetAdjective]国の支配を受け入れ、必要な時にはいつでも軍隊を招集して支援することを約束しています。"
  rajputs_estate_events.5.a:0 "その州を引き渡し、新しい居住地区の創設を許可せよ。"
  rajputs_estate_events.5.b:0 "これらの土地は我々自身で完全に上手く管理することができる。"
  rajputs_estate_events.6.t:0 "ラージプートの要求"
@@ -276,7 +276,7 @@
  EST_VAL_JAINS_ADVANCE:0 "ジャイナ教共同体の伸長: §Y$VAL$%§!"
  EST_VAL_JAINS_DECLINE:0 "ジャイナ教共同体の衰退: §Y$VAL$%§!"
  jains_estate_events.2.t:0 "ジャイナ教の影響力の拡大"
- jains_estate_events.2.d:0 "Many influential Jains have found a home in the court of [Root.Country.GetName]. Jain ascetics, bankers, and merchants alike have the ear of the [Root.Monarch.GetTitle]. There are even rumors that [Root.Monarch.GetName] [Root.Monarch.GetHerselfHimself] has joined in Jain rituals. Though a small religious minority, the Jains are gaining power in politics and society."
+ jains_estate_events.2.d:0 "多くの有力なジャイナ教徒は、[Root.Country.GetName]の宮廷に所在を見つけました。ジャイナ教徒の行者や銀行家、商人は、同じ様に[Root.Monarch.GetTitle]に話を聞いてもらえます。ジャイナ教の儀式に[Root.Monarch.GetName]自身が参加したという噂すらあります。小さな宗教の少数派ではありますが、ジャイナ教徒は政治と社会において権力を獲得しています。"
  jains_estate_events.3.t:0 "ジャイナ教の影響力の衰退"
  jains_estate_events.3.d:0 "ジャイナ教徒は自身に社会資本が欠けていることに再度気づきました。著名な行者は、一連の宗教的かつ政治的な相違に従って、宮廷から追放されることをどうにか回避しており、ジャイナ教徒の商人は運命が衰えていると感じています。ジャイナ教徒の影響力は低下しています。"
  jains_estate_events.4.t:0 "ジャイナ教徒の迫害への抵抗"
@@ -339,12 +339,12 @@
  marathas_estate_events.4.a:0 "国家が馬を提供しよう。"
  marathas_estate_events.4.b:0 "高すぎる。彼等が自分の馬を買わねばならん。"
  marathas_estate_events.5.t:0 "マラーター社会の軍事化"
- marathas_estate_events.5.d:0 "The Marathas bring with them a hardened martial culture to the lands they rule. They maintain close ties with the peasantry and lower castes, favoring an egalitarian outlook over a belief in the inherent worth of nobility. Unlike many Indian armies, which typically draw their manpower from the ranks of the nobility, the Marathas raise legions of peasant-soldiers skilled in guerrilla warfare. Though not endowed with the excellence of noble and illustrious birth, their martial experience makes them superior to the easy and effeminate troops of our enemies."
+ marathas_estate_events.5.d:0 "マラーターは、彼らが支配する土地への軍事文化の強化をもたらします。彼らは、農民層や下層階級と緊密な関係を保ち、貴族の本質的価値を信じる平等主義の見通しを支持しています。通常、貴族階級から人的資源を引き出す多くのインドの軍隊とは異なり、マラーターはゲリラ戦に長けた農兵の部隊を招集します。高貴で有名な家柄の優越性に恵まれていませんが、彼らの軍事経験は、敵の容易く弱々しい軍隊よりも優れたものにします。"
  marathas_estate_events.5.a:0 "陸軍のためのより多くの人材"
  EST_VAL_MARATHA_MILITARIZATION:0 "軍事社会: §Y$VAL$%§!"
  marathas_estate_events.6.t:0 "軍事化による穀物不足の発生"
  marathas_estate_events.6.d:0 "マラーター社会の軍事力の拡大には生態的な障害があります。農民がかつて畑の世話をしていた所、彼らは現在、半年は兵士として仕え、簡単に富を得ています。労働力不足に加え、軍馬の需要の増加は、伝統的な農業を困難かつ採算性の悪いものとしており、領土をより飢饉になりやすくしています。多くは牧畜業に転換しています。なぜなら、牛は、より少ない労働力で飼育できたり、日照りの間は森林に入れることができたり、戦争時に峡谷に隠したりすることができます。[maratha_farming_province.GetName]の軍事力を縮小する必要があるかもしれませんが、農民はこの知らせを良い知らせとは受け取らないでしょう。"
- marathas_estate_events.6.a:0 "我々はこれを受け入れなければならない。"
+ marathas_estate_events.6.a:0 "我々はこれを受け入れるべきだ。"
  marathas_estate_events.6.b:0 "農民たちに土地に戻ってくるように命ぜよ。"
  marathas_estate_events.6.c:0 "作物を育てる為、土地を持たない農民を迎え入れよ。"
  EST_VAL_STOPPED_MILITARIZING_MARATHA:0 "非武装の農地: §Y$VAL$％§!"
@@ -404,7 +404,7 @@
  ENACT_PREVIOUS_LEVEL_BEFORE:0 "§Rこの改革を制定する前に、前列を制定する必要があります。§!"
  VACANT_REFORM_DESC:0 "この政府改革はコストなしで選択でき、以下のボーナスが得られます：\n$BENEFITS$"
  CHANGE_REFORM_DESC:3 "Changing to the Government Reform $REFORM|Y$ will remove $COST|R$ Government Reform Progress and give you the following benefits:\n$BENEFITS$"
- CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意して下さい。\n$CONDITIONS$"
+ CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意して下さい：\n$CONDITIONS$"
  NO_MANUAL_CHANGE:0 "この改革を手動で選択することはできません。"
  CHANGE_REFORM_CONFIRM_DESC:2 "Are you sure you want to change to the Government Reform $REFORM|Y$? This will cost $COST|R$ Government Reform Progress and give you the following benefits:\n$BENEFITS$$POTENTIAL$"
  VACANT_REFORM_CONFIRM_DESC:0 "政府改革$REFORM|Y$を選択してもよろしいですか？ この選択はコスト不要で、以下のボーナスが得られます：\n$BENEFITS$"
@@ -416,7 +416,7 @@
  REFORM_REPLACE_FOR_FREE_DESC:0 "どれか1つを自由に選んでください。"
  REFORM_WONT_BE_ABLE_TO_SWITCH_OUT:2 "§R取消不可の改革。この改革を選択すると、同じレベルの他の改革に変更することはできなくなります。§!\n"
  REFORM_LEVEL_LOCKED:0 "ロックされています"
- REFORM_LEVEL_LOCKED_DESC:1 "You cannot select any of these."
+ REFORM_LEVEL_LOCKED_DESC:1 "いずれも選択できません。"
  REFORM_LEVEL_NEEDS_PREVIOUS_DESC:0 "これらを選択する前に、前列を制定する必要があります。"
  CURRENT_REFORM_PROGRESS:0 "$POINTS$の政府改革進捗度を保有しています。次の改革を制定するには$REQPOINTS|Y$必要です。"
  NEXT_REFORM_EXPECTED:0 "そこに到達するのは$WHEN|Y$と予測されます。"
@@ -493,8 +493,8 @@
  POSSIBLE_POLICY_BASE:1 "基本：$VALUE|Y$\n"
  USED_POLICIES_TOOLTIP:0 "$USED$個 / $MAX|Y$個の有効な$ABILITY$政策スロットがあります。"
  USED_POLICIES_TOOLTIP_DESC:0 "$FREE|G$個の無料$ABILITY$政策スロットがあるおかげで、毎月の維持コストとして $COST|Y$ $POWERICON$ 点が必要です。"
- INVESTMENTS_IN_COMPANY_REGION_LESS_THAN:1 "$TAG|Y$ has less than $VAL|Y$ $INVESTMENT|Y$ in $REGION|Y$.\n"
- INVESTMENTS_IN_COMPANY_REGION_AT_LEAST:1 "$TAG|Y$ has at least $VAL|Y$ $INVESTMENT|Y$ in $REGION|Y$.\n"
+ INVESTMENTS_IN_COMPANY_REGION_LESS_THAN:1 "$TAG|Y$は、$REGION|Y$内の$INVESTMENT|Y$を$VAL|Y$以上有していない。\n"
+ INVESTMENTS_IN_COMPANY_REGION_AT_LEAST:1 "$TAG|Y$は、$REGION|Y$内の$INVESTMENT|Y$を$VAL|Y$以上有している。\n"
  local_venture:0 "地方ベンチャー"
  local_quarter:0 "局地的防郭"
  local_quarter_desc:0 "交易会社の者達は、攻囲の場合に容易に供給できる防御線を確立した。\n"
@@ -692,7 +692,7 @@
  CONFIRM_SETTLEMENT_GROWTH_DESC:0 "本当に植民者を$PROV|Y$に送り、移民成長を促進しますか？"
  CONFIRM_CANCEL_SETTLEMENT_GROWTH:0 "移民成長取り消しの確認"
  CONFIRM_CANCEL_SETTLEMENT_GROWTH_DESC:0 "本当に$PROV|Y$における移民成長の促進を停止しますか？"
- LOCKED_REFORM:1 "This is a special Government Reform. You cannot switch to another Reform on this level."
+ LOCKED_REFORM:1 "これは特別な政府改革です。このレベルの他の改革に変更することはできません。"
  investment_events.1.t:0 "セポイ"
  investment_events.1.d:0 "[sepoy_province.TradeCompany.GetName]は、軍事経験のある頑強な男を常に雇っている。しかしながら、[Root.Capital.GetName]から募兵する兵站は達成が難しいかもしれない。交易会社の将校は、交易会社の兵を支援するためのより費用対効果の高い方法は、現地インドの民衆からより広く雇用することだろうと提案している。これら「セポイ」連隊は、主にバラモンやラージプートのクシャトリヤといった、インド社会の上位カーストから徴用されたもので、従って、戦争の方法によく精通している。最近のインドでは見かけることが難しい誠実で公正な支払いをすると評判なため、多くのセポイは喜んで交易会社に仕えている。\n\n[Root.GetAdjective]兵のより均一化された軍隊を命令するのはより容易かもしれないが、亜大陸で利用できる膨大な人的資源を無視すべきではない。"
  investment_events.1.a:0 "新たなセポイ連隊を設立する。"
@@ -740,7 +740,7 @@
  HAS_NOT_GOVERNMENT_ATTRIBUTE:0 "$REFORM|Y$は$ATTRIBUTE|Y$の機構を持ち合わせていません"
  HAS_GOVERNMENT_ATTRIBUTE_SHORT_DESC:0 "$REFORM|Y$: $ATTRIBUTE|Y$"
  HAS_NOT_GOVERNMENT_ATTRIBUTE_SHORT_DESC:0 "$REFORM|Y$: $ATTRIBUTE|Y$"
- CANNOT_UPGRADE_RANK_DISALLOWED_BY_REFORMS:0 "Your Government Reforms prevent an upgrade to the next rank."
+ CANNOT_UPGRADE_RANK_DISALLOWED_BY_REFORMS:0 "あなたの政府改革のせいで次のランクへアップグレードできません。"
  monsoon_events.1.t:0 "[severe_monsoon_province.GetAreaName]の深刻な雨季"
  monsoon_events.1.d:1 "[GetYear]年の雨季は[severe_monsoon_province.GetAreaName]で予想されていたより遥かに深刻だった。強風と豪雨は農村と都市に等しく甚大な被害を与えた。被害の一部を復旧するための救援活動には多大な費用を要する上、[severe_monsoon_province.GetAreaName]が完全に復興するには時間がかかるだろう。"
  monsoon_events.1.a:0 "救援活動を組織せよ。"
@@ -755,7 +755,7 @@
  monsoon_events.4.a:0 "民より富だ。"
  monsoon_events.5.t:0 "梅雨"
  monsoon_events.5.d:0 "梅の花\n恵みの雨に\n鍬軽し"
- plum_rain_tooltip:0 "Provinces in the §Y[plum_rains_province.GetAreaName]§! Area producing §YGrain§!, §YWine§!, §YTea§!, or §YSpices§! get §Y'Plum Rain'§! for §Y5 years§!, giving the following effects:\nLocal Production Efficiency: §G+20.0%§!"
+ plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は§Y5年§!の間§Y梅雨§!を獲得し、次のボーナスを得ます：\n州生産効率：§G+20.0%§!"
  HAVE_HAD_REFORM:1 "改革$REFORM|Y$を得ました\n"
  HAVE_HAD_NOT_REFORM:1 "改革$REFORM|Y$を得ませんでした\n"
  mechanic_locked_government_type_yes:0 "政体の変更が禁止されている"
@@ -944,7 +944,7 @@
  COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加します\n"
  COT_REMOVE_LEVEL_EFFECT:2 "$PROVINCE|Y$の交易中心地レベルが$DELTA|R$低下します\n"
  COT_RIGHT_CLICK_TO_DOWNGRADE_SUBJECT:0 "右クリックで威信$COST|R$と引き換えに$NAME|Y$へダウングレードします。従属国が支配する交易中心地をダウングレードすると、独立欲求が§R$LIBERTY_DESIRE$%§!増加します。"
- EVTOPTE700:2 "The beloved relative of [Root.Monarch.GetName]."
+ EVTOPTE700:2 "[Root.Monarch.GetName]の最愛の親族"
  clear_delta_tooltip:0 "§Yモスク§!、§Y大モスク§!、§Y市場§!、§Y交易倉庫§!または§Y証券取引所§!がある"
  NO_TEMPLATES_IN_COMBAT:0 "§R戦闘中、陸軍をテンプレートに適合させることはできません。§!"
  NO_TEMPLATES_IN_COMBAT_NAVY:0 "§R戦闘中、海軍をテンプレートに適合させることはできません。§!"
