--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -13,7 +13,7 @@
  autocracy_reform:0 "専制政治"
  autocracy_reform_desc:0 "専制君主は自らに権力を集中させます。国家はしばしば個人的な財産とみなされます。 支配者が側近や奉仕者を持つことは珍しいことではありませんが、彼らは王家の一部とみなされます。"
  plutocratic_reform:0 "富豪政治"
- plutocratic_reform_desc:0 "A plutocratic kingdom is one where the supporters of the Monarch are those with the largest incomes. The monarch is often the head of a successful merchant enterprise, and so are many of their supporters."
+ plutocratic_reform_desc:0 "富豪王国は君主が王国の富豪たちにより支えられている政体です。君主はしばしば成功した商業企業のトップであり、多くの支援者を持ちます"
  enforce_trader_privileges_reform:0 "商業特権の施行"
  enforce_trader_privileges_reform_desc:0 "国家と成功した商業企業との関係を強化することで、私たちは世界に広がるだけでなく、自国に持ち込む利益を増やすことができます。"
  indian_sultanate_reform:0 "インド・スルタン国"
@@ -239,7 +239,7 @@
  mechanic_foreign_slave_rulers_yes:0 "外国奴隷の統治者を許可する。"
  mechanic_foreign_slave_rulers_no:0 "外国奴隷の統治者を許可しない。"
  mechanic_claim_states_yes:0 "全ての州を請求できます。"
- mechanic_claim_states_no:1 "Cannot claim entire states."
+ mechanic_claim_states_no:1 "全てのステートを請求できません。"
  mechanic_religion_yes:0 "神権制である"
  mechanic_religion_no:0 "神権制ではない"
  mechanic_republic_yes:0 "共和制である"
@@ -264,7 +264,7 @@
  mechanic_boost_income_yes:0 "商人共和制の仕組みを有効にします"
  mechanic_boost_income_no:0 "商人共和制の仕組みを無効にします"
  mechanic_can_use_trade_post_yes:0 "交易所を配置することができます"
- mechanic_can_use_trade_post_no:1 "Cannot place Trade Posts."
+ mechanic_can_use_trade_post_no:1 "交易所を配置することができません"
  mechanic_can_form_trade_league_yes:0 "貿易同盟を結成することができます"
  mechanic_can_form_trade_league_no:0 "貿易同盟を結成することができません"
  mechanic_trade_city_reform:0 "$VALUE$を作ることができる"
@@ -305,7 +305,7 @@
  governmental_purbias_register_reform_desc:0 "国家は、インド全土から熟練のラージプート兵を呼び寄せる対策を講じている。彼らをより効果的に配備できるよう、到着次第これらの戦士たちを組織して団結した連隊に編成する措置を講じるべきだ。"
  mechanic_maratha_general_interaction_yes:1 "Enables the Marathas Estate Privilege §YMaratha Military Leadership§!, which grants a maximum of §G+10%§! discipline and §R-15%§! tax income, scaled by Maratha land ownership."
  mechanic_maratha_general_interaction_no:0 " "
- mechanic_better_purbias_interaction_yes:0 "The Rajputs Estate Privilege §YEnlist Purbias§! will give an additional §G5%§! discipline to Rajput Regiments."
+ mechanic_better_purbias_interaction_yes:0 "ラージプート階級の特権§Yプルビヤの徴募§!は、ラージプート連隊に対して§G5%§!の規律の増加を与えてくれます。"
  mechanic_better_purbias_interaction_no:0 " "
  venice_merchants_reform:0 "ヴェネツィア政府"
  venice_merchants_reform_desc:0 "最も高貴なる共和国ヴェネツィアは公務員を公職に選ぶための手間のかかる複雑な制度を採用している。一連の秘密投票が41人の選挙人を任命し、各選挙人はそれぞれ壺に票を投じる。1つの票が壷から抜き取られ、そこに名前が書かれた者が新しいドージェとなる。この制度は、選挙の汚職に有効で、公平な投票を保証しようとする。"
@@ -322,9 +322,9 @@
  bureaucratic_aparatus_reform:0 "官僚機構"
  bureaucratic_aparatus_reform_desc:0 "官僚機構は拡大する官僚機構のニーズを満たすために拡大している。"
  great_mongol_state_legacy:0 "モンゴル大ハーン国"
- great_mongol_state_legacy_desc:0 "The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Great Khan while avoiding the mistakes of his unworthy successors."
+ great_mongol_state_legacy_desc:0 "チンギス・ハーンのモンゴル帝国は我々のリーダーシップの下、復活した。大ハーンによって確立された政府の制度を再構築すると共に、彼の後継者に有るまじき誤りを避けている。"
  great_mongol_state_reform:0 "モンゴル大ハーン国"
- great_mongol_state_reform_desc:0 "The Mongol Empire of Genghis Khan has been restored under our leadership. We are rebuilding the systems of government established by the Great Khan while avoiding the mistakes of his unworthy successors."
+ great_mongol_state_reform_desc:0 "チンギス・ハーンのモンゴル帝国は我々のリーダーシップの下、復活した。大ハーンによって確立された政府の制度を再構築すると共に、彼の後継者に有るまじき誤りを避けている。"
  mechanic_has_term_election_yes:0 ""
  mechanic_has_term_election_no:0 ""
  NEEDS_REGULAR_ELECTIONS:0 "統治者は生涯支配してはならない。"
