--- a/source/localisation/ledger_l_english.yml
+++ b/source/localisation/ledger_l_english.yml
@@ -211,4 +211,4 @@
  LEDGER_GOVERNMENT_LEGITIMACY:0 "正統性"
  LEDGER_GOVERNMENT_ABSOLUTISM:0 "絶対主義"
  LEDGER_GOVERNMENT_MAX_ABSOLUTISM:0 "最大の絶対主義"
- LEDGER_GOVERNMENT_CORRUPTION:0 "Corruption"
+ LEDGER_GOVERNMENT_CORRUPTION:0 "汚職"
