--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -240,7 +240,7 @@
  tur_navy_reform:0 "海軍改革"
  desc_tur_navy_reform:0 "潜在的な脅威に対応し、さらなる拡大を確保するための海軍の改革。"
  enderun_academy:0 "エンデルーン・アカデミー"
- desc_enderun_academy:1 "Training promising devshirmes and sons of prominent Ottoman officials in literature, theology, engineering and mathematics, preparing them for government service as civil servants and janissaries."
+ desc_enderun_academy:1 "文学、神学、工学、数学の分野において、有望なデヴシルメ徴用者と、著名なオスマン帝国の役人の子息を訓練し、公務員やイェニチェリとしての奉仕のために準備する。"
  expanded_timariot_system:0 "ティマール制の拡大"
  desc_expanded_timariot_system:0 "オスマン騎兵隊の大部分を占めていたティマール制のスィパーヒーの体制が拡張された。"
  expanded_royal_bureaucracy:0 "王宮官僚の拡大"
@@ -287,7 +287,7 @@
  fraternities_strengthened:0 "ギルドの強化"
  desc_fraternities_strengthened:0 "我々は、ギルドの独立した伝統に踏み入ることをしてきませんでした。その結果として、我々の法はギルドでは限られてしまいますが、彼らは我々に本当に感謝しています。"
  social_unrest_mysticism:0 "社会不安"
- desc_social_unrest_mysticism:0 "The [Root.GetAreaName] Area has seen a marked increase in local social unrest coupled with a rise in popular Sufism. As our state has been unwilling to entertain the Sufi leaders themselves we have been unable to calm the situation."
+ desc_social_unrest_mysticism:0 "[Root.GetAreaName]地域では、人気のあるスーフィー主義の台頭に伴い、地域の社会不安が著しく増加している。我々の国家がスーフィーの指導者たちを受け入れることを望んでいないため、我々はその状況を落ち着かせることができていない。"
  coffee_house_turmoil:0 "コーヒーハウスの反体制派"
  desc_coffee_house_turmoil:0 "地方の反体制派は、[Root.GetAreaName]のコーヒーハウスを、社会への妨害と、公然とした反乱を計画するための、中心的な密談の場として利用している。"
  sufi_order_integration:0 "スーフィーの指導の下での統合"
@@ -301,7 +301,7 @@
  tur_janissary:0 "イェニチェリ"
  desc_tur_janissary:0 "イェニチェリは、オスマン帝国における、非常に規律の高い、よく訓練された常備軍のエリート歩兵であった。"
  janissary_decadence:1 "イェニチェリの政変"
- desc_janissary_decadence:1 "Discontent with what their lack of direct influence over the government, the Janissary Corps have revolted against their sovereign and taken control over the state."
+ desc_janissary_decadence:1 "政府に対する直接的な影響力がないことに不満を持ち、イェニチェリ組織は彼らの君主に対し反乱を起こし、国家を支配した。"
  janissary_coup_pay:0 "イェニチェリの賃金が増加"
  desc_janissary_coup_pay:0 "政府に対する偉大な影響力を利用して、イェニチェリは彼らの賃金を引き上げる好機だと考えている。"
  strictly_enforced_janissary_discipline:0 "厳格な規律の強制"
@@ -549,9 +549,9 @@
  merchant_society:0 "商人社会"
  desc_merchant_society:0 "我々の社会における交易の重要性がますます高まっていることで、あらゆる交易に関連した職業の地位が最近急激に高まっている。以前には考えられなかったほど増加した人々は、今や海外における様々な努力の中で彼らの幸運を追求しており、その結果、新しいアイデアの流入が活発になっている。"
  growing_spice_trade:0 "香辛料貿易"
- desc_growing_spice_trade:1 "Our efforts to secure more sources of spice have not gone unnoticed by the domestic spice merchants. Confident that the state is looking after their interests, they have been unusually forthcoming with any taxes or fees they are required to pay."
+ desc_growing_spice_trade:1 "より多くの香辛料の源を確保するための我々の努力は、国内の香辛料商人たちに注目されずに終わることはなかった。国家が彼らの利益の世話をしていることを確信し、彼らは支払う必要がある税金や手数料について異常なほど協力的である。"
  growing_chinaware_trade:0 "陶磁器交易"
- desc_growing_chinaware_trade:1 "Our efforts to secure more sources of chinaware have not gone unnoticed by the domestic merchants. Confident that the state is looking after their interests, they have been unusually forthcoming with any taxes or fees they are required to pay."
+ desc_growing_chinaware_trade:1 "より多くの陶磁器の源を確保するための我々の努力は、国内の商人たちに注目されずに終わることはなかった。国家が彼らの利益の世話をしていることを確信し、彼らは支払う必要がある税金や手数料について異常なほど協力的である。"
  add_unrest_5_modifier:0 "反抗的な人々"
  desc_add_unrest_5_modifier:0 "あなたの行動は、この州の人々を混乱させている。"
  remove_unrest_5_modifier:0 "幸せな人々"
@@ -565,7 +565,7 @@
  recovering_economy:0 "景気回復"
  desc_recovering_economy:0 "我々は、我が国の人材資源の補充を可能にし、結果として、大地は再び働き、経済は回復している。"
  solidified_papal_relations_modifier:0 "教皇庁での影響力"
- desc_solidified_papal_relations_modifier:1 "Our grip on the Curia is stronger than it once was. Our Papal emissaries report that their word now counts for more than it once did."
+ desc_solidified_papal_relations_modifier:1 "我々の教皇庁への支配は以前よりも強くなっている。我々教皇の使者たちは、それらの言葉が今まで以上に重要であると報告している。"
  controlled_the_pope_mission:0 "成功した教皇庁での政略"
  desc_controlled_the_pope_mission:0 "我が国のすべての宗教機関の代表者と共に、そして教皇庁で、我々は教皇を支配するための運動を開始した。それが大きく成功することで教皇庁自体からもたらされる利益とは別に、この運動は我が国の名声と、教会自身の威信を大幅に向上させた。"
  force_converted_province_mission:0 "信仰の波"
@@ -585,7 +585,7 @@
  defended_the_lowlands:0 "低地地方の防衛"
  desc_defended_the_lowlands:0 "外部の支配に対する我々の低地の保護はうまくいっている。"
  legitimacy_defended:0 "正統性を擁護"
- desc_legitimacy_defended:1 "Our ruler was once despised and disliked by large portions of our population. Many claimed that he had no right to his throne. Now nobody would dream of saying such a thing. By turning the situation around completely, our ruler's claim has become stronger than ever."
+ desc_legitimacy_defended:1 "我々の支配者は、かつて我々の人々の大部分によって軽蔑され、嫌われた。多くの人は、彼の王位に権利がないと主張した。今、誰もそのようなことを夢にも思わない。周囲の状況を完全に転換することにより、我々の支配者の主張はこれまで以上に強くなっている。"
  drove_back_the_turk:0 "ヨーロッパの擁護者"
  desc_drove_back_the_turk:0 "オスマン帝国からヨーロッパを解放するという作戦の成功によって、我々は新旧すべてのキリスト教徒からの感謝を得ている。"
  protected_austrian_low_countries:0 "オーストリア支配の強化"
@@ -775,7 +775,7 @@
  local_slave_chief:0 "奴隷を売買する族長"
  desc_local_slave_chief:0 "この地域の地元の有力者は、彼らが外国人商人に売却する奴隷のために隣人を襲撃することに基づき、より強力な権力基盤を構築した。"
  slave_entrepot:0 "奴隷の交易中継港"
- desc_slave_entrepot:0 "This was one of our earliest slave entrepots in this region and has remained a major center of the slave trade ever since."
+ desc_slave_entrepot:0 "これはこの地域で最も初期の奴隷の集散地の一つであり、それ以来、奴隷貿易の主要な中心地であり続けている。"
  major_slave_market:0 "主要な奴隷市場"
  desc_major_slave_market:0 "厳しい規制と王室の独占の組み合わせは、すべての奴隷貿易が我が国において、この地点を通過しなければならないことを保証している。"
  slave_empire:0 "奴隷経済"
@@ -1054,7 +1054,7 @@
  shahrukhs_empire:0 "シャー・ルフの帝国"
  desc_shahrukhs_empire:0 "シャー・ルフはティムールの真の息子であることを証明し、父親がかつて征服した土地を統一した。40年の間、イラン、ホラーサーン、トランスオクシアナを厳格に支配し、王国全体で芸術や交易を後援しながらあらゆる反乱を鎮圧した。すべてのティムール朝の領主は彼により統治権が与えられており、彼はティムール朝の誰もが認める指導者であった。\n\nしかし、彼の人生の終わりが近づくにつれシャー・ルフの健康状態は悪化し、彼のできることは限られている。彼が天に召された後ティムール朝諸州の唯一の支配者として君臨する者が現れるのか、時だけがそれを知っている。"
  dhimmi_building_restrictions:0 "ズィンミーの建築制限"
- desc_dhimmi_building_restrictions:0 "We are enforcing laws on how high the buildings owned or constructed by the Dhimmi can be compared to those of the faithful."
+ desc_dhimmi_building_restrictions:0 "我々はズィンミーが、信心深い人々と比較してどれだけの高さの建築物を所有し、または構築できるかについての法を施行している。"
  perfume_capital:0 "香水の中心地"
  desc_perfume_capital:0 "[Root.GetName]は香水生産の主要な中心地である。地元の花だけでなく、輸入された香や他の香り豊かな製品は、大陸全体に輸出され引っ張りだことなっている、非常に高級な香水を作り出すため世界最高の鼻によって使用されている。"
  purification_of_tax_laws:0 "税法の浄化"
@@ -1110,7 +1110,7 @@
  muslim_enforced_religion:0 "宗教的団結の強制"
  desc_muslim_enforced_religion:0 "我々は、我々の王国の異端者に従う必要はない。偽りのイマームと司祭の伝統の信者を対象とするように設計された厳しい一連の法により、我々の社会内の異端者の影響力を重要視しないことが可能となった。"
  jingdezhen_kilns:0 "景徳鎮の窯"
- desc_jingdezhen_kilns:0 "Jingdezhen's history as a major kiln site goes back to 1004. By the 14th century was the largest center for production of porcelain in China and the center of the vast majority of all exported Imperial Porcelain throughout the period."
+ desc_jingdezhen_kilns:0 "景徳鎮の主要な窯業の地としての歴史は1004年まで遡る。14世紀には中国の磁器生産の中心地であり、その間ずっと、輸出される帝国磁器の大半を占めていた"
  nankai_tsunami:0 "南海津波"
  desc_nankai_tsunami:0 "この州は、住宅、城、街道などを洗い流した巨大な津波の影響から徐々に回復している。"
  restructuring_edo_safer:0 "復興"
@@ -1120,7 +1120,7 @@
  ashes_of_mount_fuji:0 "富士山の灰"
  desc_ashes_of_mount_fuji:0 "この地域は、富士山の噴火の影響から徐々に回復している。噴火は溶岩や岩石の形での直接的な被害はあまり生じさせなかったが、灰や石灰岩が畑を覆い、地方の川では沈泥による深刻な洪水を引き起こした。"
  chushingura:0 "忠臣蔵"
- desc_chushingura:0 "Over time, the tale of the forty-seven Ronin and their quest to avenge their master has grown to be a popular legend. Inspiring generations of warriors in our realm."
+ desc_chushingura:0 "時の経過とともに、四十七士とその主君のための仇討ちを求める物語は、人気のある伝説へと成長した。我々の王国における、武士の世代に感銘を与えている。"
  chushingura_popular_bandits:0 "人気のある盗賊"
  desc_chushingura_popular_bandits:0 "四十七人の浪人たちと、断固として彼らを止めることなく主君への仇討ちを求めた彼らの物語は、我々が日本社会に形作ろうとしている重要な変化に抵抗するものだ。"
  kyoto_of_the_west_modifier:0 "西の京"
@@ -1168,7 +1168,7 @@
  austrian_empire:0 "オーストリア王国"
  desc_austrian_empire:0 "我々の祖先の土地と神聖ローマ帝国の外での我々の拡大は、世界の目と、我々の正当な帝国において、我々の地位を確立している。"
  royal_hungary:0 "王権ハンガリー"
- desc_royal_hungary:0 "We have acquired the crown of Hungary, offering them a safe alternative to Turkish rule. The Hungarian people are now flocking to our banners, along with minorities such as Vlachs and Germans who are also fleeing Ottoman Expansion in the Balkans."
+ desc_royal_hungary:0 "我々はハンガリーの王冠を取得し、トルコの支配への安全な代替手段とした。ハンガリーの人々は、バルカンにおけるオスマン帝国の拡大から逃れたヴラフ人やゲルマン人などの少数派とともに、現在我々の旗の下に集まっている。"
  austria_reunited:0 "オーストリアの再統合"
  desc_austria_reunited:0 "我々の努力を通じて、かつて一度は分裂した領土が再結合されている。"
  at_the_gates_of_europe:0 "ヨーロッパの入口"
@@ -1192,7 +1192,7 @@
  ruthenian_integration:0 "ルテニアの統合"
  desc_ruthenian_integration:0 "ベラルーシとルテニアの民はロシア人と多くの共通点を持っている。彼らの地を我らが帝国に統合することが、比較的容易であることは証明済みだ。"
  convert_the_steppes:0 "ステップの改宗"
- desc_convert_the_steppes:0 "The nomadic peoples of the Steppes must be converted to our faith."
+ desc_convert_the_steppes:0 "ステップの遊牧民は、我々の信仰に改宗するべきだ。"
  baltic_ambition_new:0 "バルトの野望"
  desc_baltic_ambition_new:0 "バルト海の港湾を強制的に支配することで、我々は交易商の競争における強みを確保している。少なくとも当分の間は。"
  conquest_of_finland:0 "フィンランドの征服"
@@ -1332,7 +1332,7 @@
  central_belt_coal:0 "石炭中央地帯"
  desc_central_belt_coal:0 "この地域の石炭田は、その潜在能力を最大限に引き出している。"
  rule_britannia:0 "統べよ、ブリタニア"
- desc_rule_britannia:1 "We rule all the British Isles. [Root.GetName] has taken its place on the world stage."
+ desc_rule_britannia:1 "我が国はブリテン諸島全土を支配した。[Root.GetName]は世界の舞台に立っている。"
  conquest_of_ireland:0 "アイルランドの征服"
  desc_conquest_of_ireland:0 "アイルランドは我々のものだ。その征服は血なまぐさいものであるが、我々の軍隊は熱狂している。"
  north_sea_ambition:0 "北海の野望"
@@ -1362,7 +1362,7 @@
  spa_rb_overseas_trade:0 "監督制度"
  desc_spa_rb_overseas_trade:0 "監督制度は、植民地からの優れた収入を促している。"
  ned_brazil_mod:0 "植民地の優越"
- desc_ned_brazil_mod:0 "The establishment of the East and West Trading Companies has revitalized the Dutch sphere of influence. Support for the colonies has never been stronger."
+ desc_ned_brazil_mod:0 "東と西における交易会社の設立は、オランダの影響圏を再び活性化させた。植民地への支援がこれほど強まったことはない。"
  ned_ceylon_mod:0 "オランダ海洋諸島"
  desc_ned_ceylon_mod:0 "我々が香辛料の交易路で持っている港は多いほど良い。"
  malacca_conquest:0 "交易優勢"
@@ -1408,7 +1408,7 @@
  per_pashtun_warriors:0 "パシュトゥーン人の徴集"
  desc_per_pashtun_warriors:0 "アフガニスタンの征服は、パシュトゥーン人の戦士たちを我々の兵士として募集する道を開いた。インドの平原を略奪することを許されることを期待し、多くが我々の運動に加わることを強く望んでいる。"
  solanki_fortress:0 "ソランキ要塞の改修"
- desc_solanki_fortress:0 "Built by the ancient Solanki Kings, and further built upon by countless overlords, the fortress at Champaner is widely known to be impregnable. We have proven that rumor false, so we must renovate and improve the walls."
+ desc_solanki_fortress:0 "古代のソランキ王によって建設され、さらに無数の君主が頼りにしてきたチャーンパーネールの要塞は、難攻不落であることが広く知られている。我々はその噂が間違っていることを証明しており、壁を改修し向上させる必要がある。"
  tim_mountain_reconquest:0 "山岳の征服"
  desc_tim_mountain_reconquest:0 "我々の軍は危険な山岳の地形から貴重な教訓を得てきた。"
  tim_heartland_reconquest:0 "中心部の征服"
@@ -1612,13 +1612,13 @@
  master_of_southern_india:0 "南インドの支配者"
  desc_master_of_southern_india:0 "南インドの豊かな土地の完全支配を達成することによって、インド洋の経済への堅固な支配を何とか確立できた。東アフリカからマラヤまでダッキニー語を聞くことができ、我が港から出発した製品は西の大都市や東の宮廷にたどり着く。"
  coromandel_trade:0 "コロマンデル交易"
- desc_coromandel_trade:0 "Through controlling all the important ports of the Coromandel Coast we have greatly increased the profitability of all our trading enterprises."
+ desc_coromandel_trade:0 "コロマンデル海岸の全ての重要港の支配を通じて、我々の全交易会社の収益性が著しく増加した。"
  fall_of_vijayanagar:0 "権威の損失"
  desc_fall_of_vijayanagar:0 "我が祖先の首都の喪失は支配者としての無能さを十分に立証した。失った信頼を取り戻すまで、土地や我々がかつて忠実であることで頼りとした人々を支配するのには困難な状況だ。"
  spoils_of_vijayanagar:0 "ヴィジャヤナガルの征服"
  desc_spoils_of_vijayanagar:0 "勝利の都の征服を通じて、我々がデカン及びその周辺地域の正統なる支配者であることを証明した。"
  bijapur_karnatak_modifier:0 "ビジャープル・カルターナカ"
- desc_bijapur_karnatak_modifier:0 "By subjugating the Karnatak south of Bijapur all the way down to the Comorin Cape we have taken a strong stranglehold both on the westerly trade and on one of the more war hardened parts of the Deccan. New recruits are flocking to our banners both in our local recruitment offices and from overseas."
+ desc_bijapur_karnatak_modifier:0 "ビジャープルの南部カルナータカからコモリン岬のずっと向こうまでを支配下に置くことにより、西方貿易とデカンの多くの戦争で鍛えられた地域の一つという双方の意味で、強力な拠点を取った。地方の採用担当者へも海外からも、新兵が我が旗に殺到している。"
  bah_conquest_of_gujarat:0 "グジャラートの征服"
  desc_bah_conquest_of_gujarat:0 "グジャラートの貿易港を確保することにより、現在多くの北部インドの貿易を支配し、同様にメッカやメディナへの旅の為にほぼ全ての巡礼者によって港が利用される。"
  direct_link_with_iran:0 "ペルシア世界との直接接触"
@@ -1632,7 +1632,7 @@
  bah_access_to_the_sea:0 "ダーブールとチャウルの港"
  desc_bah_access_to_the_sea:0 "我がスルタンのため、もう一度海への出口を確保することにより、有能な騎兵隊が必要とする高品質の戦馬がないということが起こらないよう努めてきた。"
  mahmud_gawans_madrassah_modifier:0 "マフムード・ガーワーンのマドラサ"
- desc_mahmud_gawans_madrassah_modifier:0 "We have built a great Madrasa in this city, to attract learned scholars from the entire Persianate world to our lands."
+ desc_mahmud_gawans_madrassah_modifier:0 "教養ある学者をペルシア世界全体から我が土地へ呼び寄せるため、この都市に大マドラサを建設した。"
  marathi_fiefs_modifier:0 "マラーターの封土"
  desc_marathi_fiefs_modifier:0 "我々は地元のマラーター貴族との同盟を構築し、軍事力を大幅に強化した。"
  metropolis_of_the_deccan_modifier:0 "デカンの大都市"
@@ -1740,7 +1740,7 @@
  mer_sindh_conquest:1 "シンドの征服"
  hin_riches_modifier:0 "インドの富"
  desc_hin_riches_modifier:0 "ダイヤモンドや香辛料、織物の独占に近い状況は、我が国家に大きな富をもたらす。"
- industrialized_bengal:0 "Industrialization in Bengal"
+ industrialized_bengal:0 "ベンガルの工業化"
  desc_industrialized_bengal:0 "ベンガル産業への比類なき投資は我々を技術革新の最先端に位置させる。"
  dharma_modifier:0 "ダルマ"
  desc_dharma_modifier:0 "我々はひとつであり、真なる調和国家である。"
@@ -1949,7 +1949,7 @@
  company_mint:0 "交易会社の独自通貨"
  desc_company_mint:0 "交易会社の独自通貨が、この州で発行されており、その標準硬貨がすべての会社業務で使用できることが保証されています。"
  developing_company_settlement:0 "繁栄している定住地"
- desc_developing_company_settlement:0 "Migrants from our homeland have settled successfully in this province, establishing schools, hospitals, and places of worship."
+ desc_developing_company_settlement:0 "本国からの移民はこの州に無事定住し、学校、病院、教会を設立しています。"
  monopoly_enforced:0 "独占の強制"
  desc_monopoly_enforced:0 "地方統治者がこの州で生産された交易品に対する交易会社の独占権を認める事を保証した。"
  rogue_traders_prosecuted:0 "悪徳交易商の処分"
@@ -1986,7 +1986,7 @@
  india_jains_promoted:0 "ジャイナ氏族の後援"
  desc_india_jains_promoted:0 "我々の管理を支援する事によって我々の寛大さに次々と報いるいくつかの高名なジャイナ教徒の氏族に後援を拡大した。"
  india_production:0 "生産の改善"
- desc_india_production:0 "Our new workshops provide additional opportunities for employment for craftsmen and laborers, increasing our capacity for the production of goods."
+ desc_india_production:0 "新しい工房は職人や労働者へ雇用の機会を増やし、商品の生産力を高めている。"
  india_light_ships:0 "商船隊"
  desc_india_light_ships:0 "多数の商船が我々の貿易網を保護及び拡大し、富が我々の港に流れるようにする。"
  india_goods_produced:0 "工業の拡大"
@@ -2016,13 +2016,13 @@
  revoked_estate_modifier:0 "地方権力の空白"
  desc_revoked_estate_modifier:0 "この州の地方の権力者を潰して以来、法律や秩序が悪化している。現地の者達は変化に反対するようになり、少なくとも今のところ、中央権力を非難している。"
  maratha_benign_neglect:0 "マラーターの傍観"
- desc_maratha_benign_neglect:0 "We have allowed the Marathas to rule this province with a great deal of autonomy. In return, they reinforce our armies with recruits from the peasantry."
+ desc_maratha_benign_neglect:0 "マラーターがこの州を多大な自治を持って支配する事を許した。その代わり、彼らは農民から徴兵する事によって我が軍隊を増強する。"
  EST_VAL_NOBLE_ELITE:0 "貴族エリート: §Y$VAL$％§!"
  tibet_restored_pala:0 "パーラ王国の復活"
- desc_tibet_restored_pala:0 "With the Pala Kingdom restored as our subject nation, the restoration of the Tibetan Empire seems assured."
+ desc_tibet_restored_pala:0 "パーラ王国が我が従属国として復活した事で、チベット帝国の復活が保証されたようである。"
  tibet_china_defeated:0 "中国の打破"
  desc_tibet_china_defeated:0 "チベットの手による中国の敗北は我々の軍隊を勢いづかせた。長期の軍事行動は、どんな中国の帝国軍が残っていようとも打ち砕くのに利用できる貴重な軍事経験を与えた。"
- desc_increased_janissary_recruitment:1 "Enrollment into the Janissaries has been extended to those outside the devshirme system."
+ desc_increased_janissary_recruitment:1 "イェニチェリへの入隊は、デヴシルメ制度の外部の者にも拡大されている。"
  desc_mug_fall_of_delhi:0 "デリーの陥落はインド亜大陸での新しい力として我々の台頭を示し、それは最も優秀な兵士だけが仕えることも示す。"
  desc_warrior_castes_promoted:0 "戦士カーストの身分の振興は、規律ある戦争文化を作り出した。"
  varna_avenged:0 "ヴァルナの報復"
@@ -2044,7 +2044,7 @@
  order_of_the_dragon_restored:0 "ドラゴン騎士団の復活"
  desc_order_of_the_dragon_restored:0 "ドラゴン騎士団は、もう一度オスマンのヨーロッパへの拡大に対する防壁として立ち上がる。十字軍で信仰を取り戻したので、やがて他の人たちも参加することに納得してくれるかもしれない。"
  roman_romania:0 "ローマのルーマニア"
- desc_roman_romania:0 "We have conquered the former lands of the Byzantine Empire and claimed for ourselves the mantle of Rome."
+ desc_roman_romania:0 "ビザンツ帝国の旧地を征服し、ローマのマントを自身のために主張した。"
  united_voivodes:0 "ヴォイヴォダの統一"
  desc_united_voivodes:0 "ルーマニアのヴォイヴォダは一つの公爵の下、統一されている。"
  bucharest_summer_capital:0 "夏の首都"
@@ -2121,7 +2121,7 @@
  spa_plus_ultra:0 "プルス・ウルトラ"
  desc_spa_plus_ultra:0 "ヘラクレスの柱を超えた先には何があるのだろう？我々の勇敢な探検家は今まさにそれを見つけようとしている…"
  cuba_plantations:0 "キューバにおけるプランテーション"
- desc_cuba_plantations:0 "The plantations of Cuba, worked primarily by native slaves, are experiencing a production boom as a result of our vigorous efforts to exploit the island's resources."
+ desc_cuba_plantations:0 "主に現地人奴隷の労働によって成り立っているキューバのプランテーションは、この島を開発しようとする我々の精力的な努力が実を結び今まさに急成長を遂げている。"
  fortified_navarra:0 "ナバラの要塞化"
  desc_fortified_navarra:0 "我々は敵に備えてナバラの城の防備を固めた。"
  viceroyalty_of_new_spain:0 "ヌエバ・エスパーニャ副王領"
@@ -2173,11 +2173,11 @@
  ara_envoy_to_ethiopia:0 "アビシニアの大使館"
  desc_ara_envoy_to_ethiopia:0 "我々はエチオピアのキリスト教信仰の保護者となった。"
  por_padroado:0 "布教保護権"
- desc_por_padroado:0 "An arrangement has been made with the Pope by which the crown of Portugal has jurisdiction over church properties and activities in the New World and in the Indies."
+ desc_por_padroado:0 "ポルトガルの王冠に新世界とインドの教会の財産と活動に関する管轄権があることを教皇との協定によって定められた。"
  por_minas_gerais:0 "ミナスジェライス"
  desc_por_minas_gerais:0 "ミナスジェイラスの鉱山は無尽蔵のようだ。"
  por_wine_monopolies:0 "ワインの独占"
- desc_por_wine_monopolies:0 "We have secured monopolies on the wine trade in many foreign ports."
+ desc_por_wine_monopolies:0 "我々は多くの外国の港でワイン交易を独占した。"
  por_houses_of_trade:0 "通商院"
  desc_por_houses_of_trade:0 "通商院は我が国の世界的な商業活動を調整する。"
  por_arts_and_letters:0 "芸術と文学"
@@ -2185,7 +2185,7 @@
  por_triangle_trade_modifier:0 "三角貿易"
  desc_por_triangle_trade_modifier:0 "三角貿易における優勢は、我々に敗北した競争相手ではなく我々へ売却することをアフリカの奴隷商たちに余儀なくさせた。"
  por_african_gold_modifier:0 "アフリカのゴールドラッシュ"
- desc_por_african_gold_modifier:0 "Portuguese adventurers are flocking to East Africa to exploit the gold mines there."
+ desc_por_african_gold_modifier:0 "ポルトガルの冒険者たちは東アフリカの金山を開発するために押し寄せている。"
  portuguese_carib_modifier:0 "カリブ海植民地の繁栄"
  desc_portuguese_carib_modifier:0 "我々のカリブ海植民地は注意深い監視の下で繁栄している。"
  persian_gulf_trade_por:0 "ペルシア湾交易"
@@ -2197,7 +2197,7 @@
  berber_fleet:0 "バルバリア艦隊"
  desc_berber_fleet:1 "我々は地中海の恐怖となるであろう艦隊を構築した。"
  berber_piracy:0 "バルバリア海賊"
- desc_berber_piracy:0 "Our Barbary Pirates are hard at work terrorizing the seas. Not all vessels submit without a fight of course, and this experience has hardened the pirates."
+ desc_berber_piracy:0 "バルバリア海賊は海を脅かすことに没頭している。当然、全ての船舶が戦闘無しで服従しておらず、この経験は海賊を強くした。"
  berber_turkish_diplomacy:0 "トルコの外交"
  desc_berber_turkish_diplomacy:0 "オスマン帝国のスルタンとの取引における我が国の外交的解決は、世界へ向け我が国の重要性を証明した。"
  berber_new_world_pirates:0 "新世界の侵略者"
@@ -2241,7 +2241,7 @@
  adu_trade_hub:0 "関心ある港"
  desc_adu_trade_hub:0 "これはほとんど譲歩しない隣国から貴重な収入を引き出すための理想的な立地にある港だ。"
  adu_native_concord:0 "原住民との協調"
- desc_adu_native_concord:0 "The violent behavior of the first Portuguese and Castilian explorers to reach the new world has not gone unnoticed by the indigenous peoples who reside there. We have come to see this as an opportunity for a different approach - one that might see us prosper together, rather than foment war and discord."
+ desc_adu_native_concord:0 "最初にポルトガル人とカスティーリャ人の探検家が新世界へたどり着いた際の暴力的な振る舞いは、そこに住む土着民に気づかれていない。このことを異なる取り組みの機会ということが分かってきた―それは我々に、戦争や不和を扇動するよりもむしろ共に繁栄するのを見せるかもしれない。"
  sicily_in_safe_hands:0 "行政投資"
  desc_sicily_in_safe_hands:0 "シチリア島は我が直接支配においてさらに役立っているーよって、島を繁栄させるためにより多くの資源を投資することができる。"
  adu_popular_appeal:0 "信者たちの流入"
