--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -385,7 +385,7 @@
  PROV390:0 "サナア"
  PROV391:0 "ナジュラーン"
  PROV392:0 "アル＝アリード"
- PROV393:0 "ジャバル・シャンマル"
+ PROV393:0 "ジャバル・シャーマル"
  PROV394:0 "アル・カティーフ"
  PROV395:0 "カタール"
  PROV396:0 "バーレーン"
@@ -2286,7 +2286,7 @@
  PROV2319:0 "マンファルート"
  PROV2320:0 "ラース・ガーリブ"
  PROV2321:0 "ケセール"
- PROV2322:0 "ワジハルファ"
+ PROV2322:0 "ワディ・ハルファ"
  PROV2323:0 "サハラ・アン・ヌービヤ"
  PROV2324:0 "ハラーイブ"
  PROV2325:0 "タラナ"
