--- a/source/localisation/random_new_world_l_english.yml
+++ b/source/localisation/random_new_world_l_english.yml
@@ -4544,7 +4544,7 @@
  p_hinengura:0 "Hinengura"
  p_hinengura_adj:0 "Hinenguran"
  l_crystal_lake:0 "Crystal Lake"
- l_lake_buckhorn:0 "Lake Buckhorn"
+ l_lake_buckhorn:0 "バックホーン湖"
  l_red_lake:0 "Red Lake"
  l_lake_silas:0 "Lake Silas"
  l_lake_yaeger:0 "Lake Yaeger"
