--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -155,7 +155,7 @@
  INTERVENE_NOT_LESS_POWERS:0 "列強の不均衡があり、あなたが弱い立場の方に加わる場合にのみ介入することができます。"
  INTERVENE_NO_POWERS:0 "戦争の両陣営に少なくとも1か国の列強が必要です。"
  INTERVENE_NOT_WAR_LEADER:0 "$RECIPIENT|Y$は、この戦争の戦争指導国ではありません。"
- INTERVENE_CHOOSE_TARGET:0 "Choose War to Intervene In:"
+ INTERVENE_CHOOSE_TARGET:0 "介入する戦争を選択："
  INTERVENE_LONG_DESC:0 "両陣営に少なくとも1か国の列強がおり、我々の参加するであろう側の方が列強が少ない場合に戦争に介入することができます。"
  INTERVENE_AGREE_TEXT:0 "開戦だ！"
  cb_forced_break_alliance:0 "同盟破棄の強要"
@@ -1383,7 +1383,7 @@
  consort_events.205.t:0 "最も重大な侮辱"
  consort_events.205.d:0 "不潔な、卑しいネズミめ！よくもそのような侮辱ができるものだ！[From.Monarch.GetTitle][From.Monarch.GetName]と[From.Monarch.GetHerHis]の[From.Consort.GetWifeHusband]である、我々の[From.Consort.GetName]との結婚は終了したという知らせが我々に届いた。[From.Monarch.GetSheHeCap]は[From.Consort.GetHerHim]を脇に退け、[From.Consort.GetHerHim]を使用済のおもちゃのように捨てるという屈辱を与えた。[From.Consort.GetName]だけでなく[Root.Monarch.Dynasty.GetName]全体への不名誉は本当に大きなものだ。"
  consort_events.205.a:0 "この侮辱がうやむやにされることはないだろう！"
- consort_events.205.a.tt:1 "[From.Monarch.GetTitle] §Y[From.Monarch.GetName]§! of [From.GetName] has divorced [From.Consort.GetTitle] §Y[From.Consort.GetName]§!."
+ consort_events.205.a.tt:1 "[From.GetName]の[From.Monarch.GetTitle]§Y[From.Monarch.GetName]§!は[From.Consort.GetTitle]§Y[From.Consort.GetName]§!と離婚しました。"
  consort_events.301.t:0 "結婚してからの10年"
  consort_events.301.da:0 "[Root.Consort.GetName]が[Root.Monarch.Dynasty.GetName]王家と結婚した時、[Root.Monarch.GetTitle]が[origin_of_consort.GetName]から、外国人である若い[Root.Consort.GetWomanMan]を招き、支配者の家族に加えることに懐疑的な人々もいた。しかし、時は流れ、今や結婚から10年以上が経った。誰もが[Root.Consort.GetTitle]を敬愛するわけではないが、ほとんどが[Root.Consort.GetHerHim]に自分たちのものという意識を向け、尊敬するようになった。高貴な夫婦の結婚記念日が見過ごされることはほとんどなく、多くの祝いの書状や様々な素晴らしさの贈り物がすでに宮殿に送られている。"
  consort_events.301.db:0 "[Root.Consort.GetName]が[Root.Monarch.Dynasty.GetName]の王家と結婚したとき、[Root.Consort.GetHerHis]出身に懐疑的な者もいた。[Root.Consort.GetSheHeCap]は、[origin_of_consort.GetName]からの若い[Root.Consort.GetWomanMan]であり、誰の目にも突然、[Root.GetName]の偉大な国家を支配するため招待されたように見えた。しかし、時は流れ、今や結婚から10年以上が経った。誰もが[Root.Consort.GetTitle]を敬愛するわけではないが、ほとんどが[Root.Consort.GetHerHim]に自分たちのものという意識を向け、尊敬するようになった。高貴な夫婦の結婚記念日が見過ごされることはほとんどなく、[Root.Monarch.GetName]と[Root.Monarch.GetHerHis]の[Root.Consort.GetName]は彼らにもたらされるあらゆる祝いの書状だけでなく、さまざまな素晴らしい贈り物を謙虚に受け入れている。"
@@ -1515,7 +1515,7 @@
  revolutionary_republic_factions.0.b:0 "野心的な男こそ必要だ。彼等に軍隊の再建を任せよう！"
  revolutionary_republic_factions.0.c:0 "我々は今、高い品質の古参兵を維持するため、できることをするべきだ。"
  revolutionary_republic_factions.1.t:0 "束縛の欠如によって…"
- revolutionary_republic_factions.1.d:1 "The old regime was always tightly tied to the power of the clergy and the fear of the divine is one of the ways to control the people that our radicals hate the most. Therefore the confiscation of religious property and the requirement for all clergy to swear an oath of loyalty to a Civil Constitution have been high on the agenda for many in the National Assembly. Outside the radicals not everyone in the assembly agrees on the best course of action and our policy has wavered a bit over time. Atheism is not always the most popular with the masses and especially in the countryside our actions against local priests have been met with contempt.\nPerhaps it could be beneficial to scale back our radicalism a bit without abandoning the long term goal of freeing society from religion?"
+ revolutionary_republic_factions.1.d:1 "旧体制は常に聖職者の力に強く結びついており、神への恐れは、我々の急進派が最も嫌う、人々を支配する方法の一つである。したがって、宗教的な財産を没収し、国民議会においてすべての聖職者が、多くの議題について市民憲法への忠誠を誓う必要性が高まっている。急進派を除いては、議会の全員が最善の行動方針に同意しているわけではなく、我々の政策は時の中で少し揺らいでいる。無神論は常に大衆に最も人気があるわけではなく、特に田舎では地元の司祭に対する我々の行動は軽蔑で満たされている。\nあるいは、宗教から社会を解放するという長期的な目標を放棄することなく、我々の急進主義を少しでも元に戻すことが有益だろうか？"
  revolutionary_republic_factions.1.a:0 "イデオロギーに背くことはできない！"
  revolutionary_republic_factions.1.b:0 "聖職者は秩序を維持するのに役立つ。"
  revolutionary_republic_factions.1.c:0 "いくつか自由な行動の余地を与えることができる。"
@@ -1672,7 +1672,7 @@
  desc_the_faithful_liberated:0 "この州の忠実なコプト教徒達は解放された。"
  stat_army_losses_desc_server_better:2 "毎年$VAL|Y$のユニットを失っていることに、他のプレイヤーはショックを受けました。"
  stat_army_losses_desc_server_worse:2 "毎年の平均$VAL|Y$と比較して、より多くのユニットを虐殺しています。"
- stat_provs_taken_desc_server_better:2 "Others players lack ambition, annexing only $VAL|Y$ provinces on average."
+ stat_provs_taken_desc_server_better:2 "他のプレイヤーは野心が欠けており、併合したのは平均して$VAL|Y$州だけです。"
  stat_provs_taken_desc_server_worse:2 "平均の$VAL|Y$州よりもはるかに多くを吸収しています。"
  fetishist_flavor.5.d.d:0 " "
  fetishist_flavor.11.t:0 " "
