--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -18,7 +18,7 @@
  dlc003_rus_sprite_pack:0 "ロシア騎兵"
  dlc005_usa_sprite_pack:0 "Freedom Sprites"
  dlc006_byz_sprite_pack:0 "Purple Phoenix Sprites"
- africangfx_sprite_pack:0 "African Base Sprites"
+ africangfx_sprite_pack:0 "アフリカのベーススプライト"
  asiangfx_sprite_pack:0 "Asian Base Sprites"
  easterngfx_sprite_pack:0 "Eastern Base Sprites"
  indiangfx_sprite_pack:0 "Indian Base Sprites"
