--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -389,7 +389,7 @@
  PROV_ADJ390:0 "サナア"
  PROV_ADJ391:0 "ナジュラーン"
  PROV_ADJ392:0 "アル＝アリード"
- PROV_ADJ393:0 "ジャバル・シャンマル"
+ PROV_ADJ393:0 "ジャバル・シャンマリアン"
  PROV_ADJ394:0 "アル・カティーフ"
  PROV_ADJ395:0 "カタール"
  PROV_ADJ396:0 "バーレーン"
@@ -2300,7 +2300,7 @@
  PROV_ADJ2319:0 "マンファルート"
  PROV_ADJ2320:0 "ラース・ガーリブ"
  PROV_ADJ2321:0 "ケセール"
- PROV_ADJ2322:0 "ワジハルファ"
+ PROV_ADJ2322:0 "ワディ・ハルファン"
  PROV_ADJ2323:0 "サハラ・アン・ヌービヤ"
  PROV_ADJ2324:0 "ハラーイブ"
  PROV_ADJ2325:0 "タラナ"
@@ -3207,7 +3207,7 @@
  PROV_ADJ4273:0 "カリアタン"
  PROV_ADJ4274:0 "スダイル"
  PROV_ADJ4275:0 "ヤマーマ"
- PROV_ADJ4276:0 "ジャバル・トゥバイク"
+ PROV_ADJ4276:0 "ジャバル・トゥバイカン"
  PROV_ADJ4277:0 "ターイフ"
  PROV_ADJ4278:0 "クンフダ"
  PROV_ADJ4279:0 "ザビード"
